Updated the alignment issues and fixed the styling issues

--- a/blocks/whatsinside/whatsinside.css
+++ b/blocks/whatsinside/whatsinside.css
@@ -1,80 +1,76 @@
-.wrapper {
+.whatsinside {
+    padding: 20px;
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
+.whatsinside .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 2.75rem;
-    padding-top: 50px;
-    padding-left: 50px;
-    padding-right: 60px;
+    padding-top: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
-.element:first-child {
-    font-size: 1.5rem;
-    color: #2E2B31;
-    font-family: helvetica;
-    font-weight: 700;
-    hyphens: auto;
-    letter-spacing: .15rem;
-    margin-bottom: 0;
-    margin-top: 1.5rem;
-    box-sizing: border-box;
-    display: block;
-    margin-block-start: 0.83rem;
+.whatsinside .wrapper .whats-inside_block {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.whatsinside .wrapper .whats-inside_block .whats-inside_block-image {
+    width: 15%;
+}
+
+.whatsinside .wrapper .whats-inside_block .whats-inside_block-image img {
+    margin-top: 1rem;
+}
+
+.whatsinside .wrapper .whats-inside_block .whats-inside_block-content {
+    width: 82%;
     text-align: left;
-    padding-left: 30px !important;
-}
-
-.content {
-    width: 346px;
     color: #2E2B31;
     font-family: helvetica;
+    margin-top: 1rem;
+}
+
+.whatsinside .wrapper .whats-inside_block .whats-inside_block-content h3{
+    font-size: 1.25rem;
     letter-spacing: .25rem;
     font-weight: 700;
+    hyphens: auto;
     line-height: 1.28;
+    margin-top: 0.5rem;
     margin-bottom: 0;
-    background-color: #fff;
-    font-size: 1.25rem;
-    overflow-wrap: break-word;
-    text-align: left;
+    padding: 0;
 }
 
-.imgdiv {
-    display: flex;
-}
-
-.imgdiv div:first-child img {
-    width: 60px;
-    height: 60px;
-}
-
-.imgdiv div:first-child {
-    width: 20%;
-    padding-top: 10px;
+.whatsinside .wrapper .whats-inside_block .whats-inside_block-content p{
+    line-height: 28px;
+    margin-bottom: 0;
+    margin-top: 1rem;
+    padding: 0;
 }
 
 @media only screen and (max-width: 767px) {
-    .wrapper {
+    .whatsinside .wrapper {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
-        padding: 55px;
         grid-gap: 0;
     }
 
-    .imgdiv div:first-child {
-        width: 100%;
-        text-align: center;
-    }
-    
-    .imgdiv {
-        display: flex;
+    .whatsinside .wrapper .whats-inside_block {
         flex-direction: column;
+        margin-bottom: 40px;
+        justify-content: flex-start;
     }
 
-    .imgdiv div:first-child img {
-        width: 120px;
-        height: 120px;
+    .whatsinside .wrapper .whats-inside_block .whats-inside_block-image {
+        width: 100%;
     }
 
-    .content {
-        width: 100%;        
+    .whatsinside .wrapper .whats-inside_block .whats-inside_block-content {
+        width: 100%;
     }
 }
